Implementado la capa de servicios para pedir permiso con un solo parámetro.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             <li>@Html.ActionLink("Cambiar perfil actual", "Cambiar", "Perfil")</li>
                             <li class="disabled"><a id="link_deshabilitado">Asignar/Revocar permisos</a></li>
                             @{
-                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ELIMINAR_PERFILES))
+                                if (permisos_usuario.verificar_permiso(IdPermiso.ELIMINAR_PERFILES))
                                 {
                                     <li>@Html.ActionLink("Crear perfil", "Crear", "Perfil")</li>
                                 }
@@ -42,7 +42,7 @@
                                     <li class="disabled"><a id="link_deshabilitado">Crear perfil</a></li>
                                 }
 
-                                if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.ELIMINAR_PERFILES))
+                                if (permisos_usuario.verificar_permiso(IdPermiso.ELIMINAR_PERFILES))
                                 {
                                     <li>@Html.ActionLink("Borrar perfil", "Borrar", "Perfil")</li>
                                 }
