Se acomodan las observaciones para que este en su espacio correspondiente

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -70,7 +70,7 @@
     }
 
 
-    @{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; string item_actual = ""; List<string> secciones = new List<string>(); bool seccion_repetida = false; int ident_seccion = 1; int ident_item = 1; /*No trabja con el orden de secciones e items en la base de datos todavia*/ }
+    @{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; string item_actual = ""; List<string> secciones = new List<string>(); bool seccion_repetida = false; }
 
     <div class="panel-group" id="accordion1">
 
@@ -121,10 +121,10 @@
                                                     {
                                                         @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
                                                         //<p>@("graficarResultados('@seccion.Item.ItemId')")</p>
-                                                        <p id="info_@item_actual" style="float:right"></p>
+                                                        <p id="graf_@item_actual" style="float:inherit"></p>
                                                         <div id="contenedorGrafo">
                                                             <canvas id="pie_chart_@item_actual"></canvas>
-                                                        </div>
+                                                        </div> 
                                                         <script>
                                                         $.ajax({
                                                             type: "POST",
@@ -146,7 +146,7 @@
 
 
                                                                 //for (var i = 0; i < tamanio; i++)
-                                                                document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + "Cantidad de Estudiantes que respondieron: \n" + (tamanio).toString() + "<br>";
+                                                                document.getElementById("graf_@item_actual").innerHTML = document.getElementById("graf_@item_actual").innerText + "Cantidad de Estudiantes que respondieron: \n" + (tamanio).toString() + "<br>";
                                                                 @*var iter = aLabels;
                                                                 <p>@seccion.Item.ItemId</p>*@
                                                                 var dataT = {
@@ -220,7 +220,7 @@
                                                                 <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
                                                                     <div class="panel-body">
                                                                         <div style="height:200px; overflow-y: scroll;">
-                                                                            <p id="info_@item_actual" style="float:right"></p>
+                                                                            <p id="obs_@item_actual" style="float:left"></p>
 
                                                                             @foreach (var item in Model.Formulario_Respuesta.Take(1))
                                                                             {
@@ -240,10 +240,11 @@
 
                                                                                             for (var data in obs) {
                                                                                                 //if (@perfil_actual.Equals("Admin")) { //Cuando se incluye el if lo que esta dentro no se despliega incluso si la condicion es verdadera
-                                                                                                document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + (obs[data]).toString() + " - " + (nom[data]).toString() + " " + (ap1[data]).toString() + " " + (ap2[data]).toString() + "<br>";
+                                                                                                document.getElementById("obs_@item_actual").innerHTML = document.getElementById("obs_@item_actual").innerText + (obs[data]).toString() + " - " + (nom[data]).toString() + " " + (ap1[data]).toString() + " " + (ap2[data]).toString() + " ";
+                                                                                                
                                                                                                 //} else {
 
-                                                                                                //}   
+                                                                                                //}
                                                                                                 // Si no se acomodan las observaciones se bloquea el collapse de mostrar observaciones
                                                                                             }
                                                                                                 }
@@ -269,7 +270,6 @@
                                         </div>
 
                                         seccion_counter++;
-                                        ident_item++;
                                     }
                                 }
                             </div>
@@ -279,8 +279,6 @@
                 </div>
 
                 id_counter++;
-                ident_seccion++;
-                ident_item = 1;
             }
         }
 
