Se cambiaron los botones para seguir el estándar.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Borrar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Borrar.cshtml
@@ -8,36 +8,37 @@
 
 @using (Html.BeginForm("ObtenerPerfilBorrar", "Perfil", FormMethod.Post))
 {
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-    </tr>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+        </tr>
 
-    @{
-        bool marcar_primero = true;
-        foreach (var item in Model)
-        {
-            if (item.Nombre != "Administrador")    // No se puede eliminar el perfil administrador.
+        @{
+            bool marcar_primero = true;
+            foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @if (marcar_primero == true)
-                        {
-                            <input type="radio" name="NombrePerfil" checked="checked" value="@item.Nombre" />
-                            marcar_primero = false;
-                        }
-                        else
-                        {
-                            <input type="radio" name="NombrePerfil" value="@item.Nombre" />
-                        }
-                        @Html.DisplayFor(modelItem => item.Nombre)
-                    </td>
-                </tr>
+                if (item.Nombre != "Administrador")    // No se puede eliminar el perfil administrador.
+                {
+                    <tr>
+                        <td>
+                            @if (marcar_primero == true)
+                            {
+                                <input type="radio" name="NombrePerfil" checked="checked" value="@item.Nombre" />
+                                marcar_primero = false;
+                            }
+                            else
+                            {
+                                <input type="radio" name="NombrePerfil" value="@item.Nombre" />
+                            }
+                            @Html.DisplayFor(modelItem => item.Nombre)
+                        </td>
+                    </tr>
+                }
             }
         }
-    }
-</table>
-    <input type="submit" value="Borrar" />
+    </table>
+    <input type="submit" value="Borrar" class="btn btn-default" />
+    @Html.ActionLink("Cancelar", "Index", "Home", null, new { @class = "btn btn-default" })
 }
