--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Cambiar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Cambiar.cshtml
@@ -30,7 +30,7 @@
     <br />
 
     <input type="submit" value="Aceptar" class="btn btn-default" style=" margin-right:10px" />
-    @Html.ActionLink("Cancelar", "Index", "Home","",new { @class = "btn btn-default" })
+    @Html.ActionLink("Cancelar", "Index", "Home", null, new { @class = "btn btn-default" })
 
 }
 
