--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Crear.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Crear.cshtml
@@ -38,6 +38,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Crear" class="btn btn-default" />
+                @Html.ActionLink("Cancelar", "Index", "Home", null, new { @class = "btn btn-default" })
             </div>
         </div>
     </div>
