creación de vista cuando se entra al botón de eliminar sección de un formulario

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario/Index.cshtml
@@ -53,4 +53,11 @@
         function accionBotonAsignarPregunta() {
             document.location = '@Url.Action("AsignarPreguntas", "CrearFormulario")';
         }
+
+    /*Se mueve hacia la vista de eliminar seccion de un formulario*/ 
+        function accionBotonEliminarSeccion() {
+            document.location = '@Url.Action("EliminarSeccion", "CrearFormulario")';
+        }
+
+
 </script>
