--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Delete.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Borrar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro que quiere borrar una sección?</h3>
 <div>
     <h4>Seccion</h4>
     <hr />
