--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -197,7 +197,7 @@
 
 </div>*@
 
- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
+ <button id ="VistaPrevia" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
     Vista Previa
 </button>
 
